--- a/day_2.html
+++ b/day_2.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Opens in same tab -->
     <a href="https://www.google.com">Visit Google</a><br><br>
-
+  
     <!-- Opens in new tab -->
     <a href="https://www.youtube.com" target="_blank">Visit YouTube</a>
 
@@ -26,6 +26,7 @@
 <!-- iframe where video results will open -->
 <iframe name="myframe" width="600" height="400" style="border:1px solid black;">
 </iframe>
+<marquee scrollamount="05">Fast Moving Text</marquee>
 
     
 
